Move EE components to jetty-core/jetty-ee